objects/ssot__PatientRegisteredDevice__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetId__c</fullName>
        <label>Asset</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareProgramEnrolleeId__c</fullName>
        <label>Care Program Enrollee</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceTypeId__c</fullName>
        <label>Device Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Patient Registered Device Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__NameType__c</fullName>
        <label>Name Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PatientId__c</fullName>
        <label>Patient</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegistrationDate__c</fullName>
        <label>Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SafetyInformationText__c</fullName>
        <label>Safety Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SupportContactDetailText__c</fullName>
        <label>Support Contact Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UniqueDeviceId1IssuerText__c</fullName>
        <label>Unique DeviceId1 Issuer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UniqueDeviceId1Text__c</fullName>
        <label>Unique DeviceId1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UniqueDeviceId2IssuerText__c</fullName>
        <label>Unique DeviceId2 Issuer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UniqueDeviceId2Text__c</fullName>
        <label>Unique DeviceId2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UniqueDeviceId3IssuerText__c</fullName>
        <label>Unique DeviceId3 Issuer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UniqueDeviceId3Text__c</fullName>
        <label>Unique DeviceId3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716723730868_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientRegisteredDevice_PatientId_ma_rel</label>
        <referenceTo>ssot__Patient__dlm</referenceTo>
        <relationshipLabel>PatientRegisteredDevice_PatientId_ma_rel</relationshipLabel>
        <relationshipName>rel_1716723730868_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716723743389_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientRegisteredDevice_DeviceTypeId_rel</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>PatientRegisteredDevice_DeviceTypeId_rel</relationshipLabel>
        <relationshipName>rel_1716723743389_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716723746891_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientRegisteredDevice_CareProgramE_rel</label>
        <referenceTo>ssot__CareProgramEnrollee__dlm</referenceTo>
        <relationshipLabel>PatientRegisteredDevice_CareProgramE_rel</relationshipLabel>
        <relationshipName>rel_1716723746891_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>